# Amtsgericht-KG

./: .gitignore  README.md  Readme.md  courts_graph_preview.html  knowledge_graph.html  pyproject.toml  top200_courts_graph.html
data/processed/: Qleverfile  register_courts.index-log.txt  register_courts.index.ops  register_courts.index.osp  register_courts.index.patterns  register_courts.index.pos  register_courts.index.pso  register_courts.index.sop  register_courts.index.spo  register_courts.internal.index.pos  register_courts.internal.index.pso  register_courts.meta-data.json  register_courts.server-log.txt  register_courts.vocabulary.codebooks  register_courts.vocabulary.words.external  register_courts.vocabulary.words.external.offsets  register_courts.vocabulary.words.internal  register_courts.vocabulary.words.internal.ids  register_courts_combined.ttl
data/raw_data/: Registergerichte_12.xlsx  Registergerichte_13.xlsx  Registergerichte_14.xlsx  Registergerichte_15.xlsx  Registergerichte_16.xlsx  Registergerichte_17.xlsx  Registergerichte_18.xlsx
kg4cr/: generate_rdf.py  generate_sep_rdf.py
logs/: run_log_summary_20251008_012313.csv  run_log_summary_20251008_100321.csv  run_log_summary_20251008_182427.csv  run_log_summary_20251008_182503.csv  run_log_summary_20251008_182710.csv  run_log_summary_20251008_182851.csv  run_log_summary_20251008_183040.csv  run_log_summary_20251008_183345.csv  run_log_summary_20251008_214124.csv  run_log_summary_20251008_214443.csv  run_log_summary_20251008_220408.csv  run_log_summary_20251008_222342.csv  run_log_summary_20251008_224809.csv  run_log_summary_20251008_231851.csv  run_log_summary_20251008_234447.csv  run_log_summary_20251009_002457.csv  run_log_summary_20251009_005659.csv  run_log_summary_20251009_012250.csv  run_log_summary_20251009_015118.csv  run_log_summary_20251009_020339.csv  run_log_summary_20251010_021958.csv  run_log_summary_20251017_103734.csv  run_log_summary_20251017_201517.csv  run_log_summary_20251018_033957.csv  run_log_summary_20251018_143519.csv
(+191 files in other folders)
