[tool.poetry]
name = "kg4cr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.16"
rdflib = "^7.1.4"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ollama = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
